--- a/css/main.css
+++ b/css/main.css
@@ -403,6 +403,10 @@ transition: all 0.3s;
 	left: 0;
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
+}
+.item-category:hover .item-category__image img {
+	transform: scale(1.05);
 }
 .item-category__image img {
 		width: 100%;
@@ -475,6 +479,7 @@ color: #ffffff;
 }
 .footer a {
 		color: #354954;
+		transition: all 0.3s;
 }
 .footer__title {
 	font-weight: 600;
@@ -618,7 +623,7 @@ font-size: 30px;
 line-height: 36px;
 margin-bottom: 38px;
 font-weight: 600;
-margin-top: 60px;
+padding-top: 60px;
 text-transform: uppercase;
 position: relative;
 }
@@ -912,6 +917,7 @@ margin-left: 80px;
 }
 .list-map {
 	height: 493px;
+		padding-top: 25px;
 	margin-right: -80px;
 	overflow: auto;
 }
@@ -931,7 +937,7 @@ margin-left: 80px;
 }
 .list-map li {
 	padding: 15px;
-	padding-top: 25px;
+
 	padding-left: 0;
 	padding-right: 5px;
 	line-height: 30px;
@@ -949,5 +955,86 @@ margin-left: 80px;
 }
 .list-map li.active span,
 .list-map li:hover span {
+	border-color: #354954;
+}
+.descr-section {
+	font-size: 20px;
+line-height: 30px;
+font-weight: 500;
+}
+.dairy .title-section::after {
+	display: none;
+}
+.item-dairy:nth-child(even) .row {
+	flex-direction: row-reverse;
+}
+.item-dairy .row {
+	align-items: center;
+}
+.item-dairy {
+	font-size: 18px;
+line-height: 30px;
+margin-bottom: -60px;
+}
+.item-dairy p {
+	margin-bottom: 20px;
+}
+.item-dairy__text {
+	padding-right: 30px;
+	position: relative;
+	padding-left: 100px;
+}
+.item-dairy__number {
+	width: 73px;
+height: 73px;
+background-color: #7ac7f5;
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
+text-align: center;
+font-size: 36px;
+font-weight: 600;
+text-transform: uppercase;
+color: #ffffff;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+.dairy .descr-section {
+	max-width: 45%;
+}
+.dairy {
+	background-image: url(../img/bg_dairy.png);
+	background-repeat: no-repeat;
+	background-size: 55% 2272px;
+	background-position: right top;
+}
+.item-dairy iframe {
+	height: 413px;
+	width: 100%;
+}
+.item-dairy .descr-section {
+	max-width: 100%;
+}
+.item-category__image {
+	z-index: 1;
+}
+.item-category__title,
+.item-category__content a {
+	position: relative;
+	z-index: 2;
+}
+.item-category__content li {
+	z-index: 2;
+}
+.item-category__content ul {
+	position: relative;
+	z-index: 2;
+}
+.footer__nav a {
+	border-bottom: 1px solid transparent;
+}
+.footer__nav a:hover {
 	border-color: #354954;
 }
