--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ font-family: 'AvenirNextCyr';
 	color: #354954;
 	background-color: #fff;
 }
-button {
+button { 
 	cursor: pointer;
 }
 h1,h2,h3,h4,h5,h6 {
@@ -987,6 +987,7 @@ margin-bottom: -60px;
 	padding-right: 30px;
 	position: relative;
 	padding-left: 100px;
+	max-width: 90%;
 }
 .item-dairy__number {
 	width: 73px;
@@ -1009,9 +1010,10 @@ color: #ffffff;
 	max-width: 45%;
 }
 .dairy {
+	padding-bottom: 65px;
 	background-image: url(../img/bg_dairy.png);
 	background-repeat: no-repeat;
-	background-size: 55% 2272px;
+	background-size: 57% 100%;
 	background-position: right top;
 }
 .item-dairy iframe {
@@ -1041,4 +1043,61 @@ color: #ffffff;
 }
 .footer__nav a:hover {
 	border-color: #354954;
+}
+.item-dairy:last-child {
+	margin-bottom: 0;
+}
+.descr-italic {
+	font-size: 24px;
+line-height: 30px;
+font-weight: 500;
+font-style: italic;
+text-align: right;
+}
+.item-dairy .descr-section {
+	padding-left: 120px;
+	padding-right: 30px;
+	padding-top: 30px;
+}
+.item-dairy__image img {
+	max-width: 100%;
+}
+.title-big {
+	font-size: 48px;
+line-height: 1.2;
+font-weight: 600;
+color: #354954;
+}
+.title-big strong {
+	font-weight: 800;
+}
+.descr-big {
+	font-size: 24px;
+line-height: 34px;
+font-weight: 600;
+}
+.presentation {
+	padding-top: 100px;
+	padding-bottom: 80px;
+	background-image: url(../img/bg_presentation.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+}
+.presentation .title-big strong {
+	display: block;
+}
+.presentation .title-big {
+    max-width: 70%;
+    margin-bottom: 40px;
+}
+.presentation .descr-big {
+    max-width: 46%;
+}
+.descr-big p {
+	margin-bottom: 30px;
+}
+.presentation .btn-main {
+	font-size: 18px;
+	height: 55px;
 }
